[project]
name = "06-at"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Lombardi",email = "michele.lombardi2@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.4.7,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "xgboost (>=3.1.1,<4.0.0)",
    "shap (>=0.49.1,<0.50.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "boruta (>=0.4.3,<0.5.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "nbconvert[webpdf] (>=7.16.6,<8.0.0)"
]
